[gd_scene load_steps=2 format=3 uid="uid://b7nixkcamxlir"]

[ext_resource type="Script" path="res://Networking.gd" id="1_m8mbv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m8mbv")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 32.0
offset_right = 345.0
offset_bottom = 104.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 32.0
offset_right = 690.0
offset_bottom = 104.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 745.0
offset_top = 32.0
offset_right = 1052.0
offset_bottom = 104.0
text = "Start Game
"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
